Fix/ home section alignment adjustment

--- a/src/components/sections/hero/style.css
+++ b/src/components/sections/hero/style.css
@@ -1,8 +1,8 @@
 .scroll-downs {
     position: absolute;
-    top: 250px;
-    right: 0;
-    bottom: 50px;
+    top: 220px;
+    right: 15px;
+    bottom: 0;
     left: 0;
     margin: auto;
 
